Do not use self closing tags for custom elements

--- a/lib/generators/alchemy_angular/templates/templates/cell.html
+++ b/lib/generators/alchemy_angular/templates/templates/cell.html
@@ -1,3 +1,3 @@
 <div class="<%= @cell['name'] %>">
-  <alchemy:element ng-repeat="element in elements" element="element">
+  <alchemy-element ng-repeat="element in elements" element="element"></alchemy-element>
 </div>
