--- a/lib/generators/alchemy_angular/templates/templates/page.html
+++ b/lib/generators/alchemy_angular/templates/templates/page.html
@@ -1,5 +1,3 @@
-<div ng-class="page_layout">
-  <div ng-repeat="element in elements">
-    <alchemy:element element="element">
-  </div>
+<div ng-class="pageLayout">
+  <alchemy-element ng-repeat="element in elements" element="element"></alchemy-element>
 </div>
